service.yml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-service
spec:
  selector:
    app: tic-tac-toe  # The app label must match the one in the deployment.yml
  ports:
    - protocol: TCP
      port: 80  # The port exposed within the cluster
      targetPort: 8000  # The port your Flask app is listening on
  type: NodePort
